@@ -246,8 +246,6 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>org.eclipse.swt.cocoa.macosx.x86_64</arg>
                                 <arg>--add-reads</arg>
                                 <arg>javafx.swt=org.eclipse.swt.cocoa.macosx.x86_64</arg>
                             </compilerArgs>
@@ -275,8 +273,6 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>org.eclipse.swt.gtk.linux.ppc64le</arg>
                                 <arg>--add-reads</arg>
                                 <arg>javafx.swt=org.eclipse.swt.gtk.linux.ppc64le</arg>
                             </compilerArgs>
@@ -303,8 +299,6 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>org.eclipse.swt.win32.win32.x86_64</arg>
                                 <arg>--add-reads</arg>
                                 <arg>javafx.swt=org.eclipse.swt.win32.win32.x86_64</arg>
                             </compilerArgs>
